force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Currency__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Currency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Currency</label>
    <referenceTo>VisualAntidote__Payment_Currency__c</referenceTo>
    <relationshipLabel>Payment Fields</relationshipLabel>
    <relationshipName>Payment_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>