force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Field_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Field_ID__c</fullName>
    <label>Field ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>