force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Form__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
    <relationshipLabel>Payment Fields</relationshipLabel>
    <relationshipName>Payment_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>