force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Is_Payment_Hidden__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Is_Payment_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Hidden</label>
    <type>Checkbox</type>
</CustomField>