force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Label_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Label_Credit_Card__c</fullName>
    <defaultValue>&apos;Credit Card&apos;</defaultValue>
    <label>Label Credit Card</label>
    <length>50</length>
    <type>Text</type>
</CustomField>