force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Label_CVV__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Label_CVV__c</fullName>
    <defaultValue>&apos;CVV&apos;</defaultValue>
    <label>Label CVV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>