force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Label_Shipping__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Label_Shipping__c</fullName>
    <defaultValue>&apos;Shipping&apos;</defaultValue>
    <label>Label Shipping</label>
    <length>50</length>
    <type>Text</type>
</CustomField>