force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Label_Sub_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Label_Sub_Total_Amount__c</fullName>
    <defaultValue>&quot;Subtotal&quot;</defaultValue>
    <label>Label Sub Total Amount</label>
    <type>TextArea</type>
</CustomField>