force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Label_Taxes__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Label_Taxes__c</fullName>
    <defaultValue>&apos;Taxes&apos;</defaultValue>
    <label>Label Taxes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>