force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Label_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Label_Total_Amount__c</fullName>
    <defaultValue>&apos;Total Amount&apos;</defaultValue>
    <label>Label Total Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>