force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Notification_Email__c</fullName>
    <label>Notification Email</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>