force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Notification_Email_To_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Notification_Email_To_Field_ID__c</fullName>
    <label>Notification Email To Field ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>