force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Payment_Formula_JS__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Payment_Formula_JS__c</fullName>
    <label>Payment Formula JS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>