force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>