force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Provider_Field_Mapping_XML__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Provider_Field_Mapping_XML__c</fullName>
    <label>Provider Field Mapping XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>