force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Recurring_Payment_Initial_Amt_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Recurring_Payment_Initial_Amt_Field_ID__c</fullName>
    <label>Recurring Payment Initial Amt Field ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>