force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Recurring_Payment_Initial_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Recurring_Payment_Initial_Fixed_Amount__c</fullName>
    <label>Recurring Payment Initial Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>