force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Recurring_Payment_Interval__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Recurring_Payment_Interval__c</fullName>
    <label>Recurring Payment Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>SemiMonth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>