force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Retry_Recurring_Payment_After_Failure__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Retry_Recurring_Payment_After_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Recurring Payment After Failure</label>
    <type>Checkbox</type>
</CustomField>