force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Shipping_Formula2__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Shipping_Formula2__c</fullName>
    <label>Shipping Formula2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>