force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Subtotal_Amount_Default_Formula2__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Subtotal_Amount_Default_Formula2__c</fullName>
    <label>Subtotal Amount Default Formula2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>