force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Subtotal_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Subtotal_Amount_Formula__c</fullName>
    <label>Subtotal Amount Formula</label>
    <type>TextArea</type>
</CustomField>