force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Subtotal_Amount_Formula_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Subtotal_Amount_Formula_Type__c</fullName>
    <label>Subtotal Amount Formula Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>