force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Subtotal_Amount_Mapping_XML__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Subtotal_Amount_Mapping_XML__c</fullName>
    <label>Subtotal Amount Mapping XML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>