force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Subtotal_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Subtotal_Base_Amount__c</fullName>
    <label>Subtotal Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>