force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Taxes_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Taxes_Field_Type__c</fullName>
    <label>Taxes Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
                <default>true</default>
                <label>Static</label>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>