force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Taxes_Fixed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Taxes_Fixed_Percentage__c</fullName>
    <label>Taxes Fixed Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>