force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Test_Mode__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Test_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Mode</label>
    <type>Checkbox</type>
</CustomField>