force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Transaction_ID_Mapping_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Transaction_ID_Mapping_Field_ID__c</fullName>
    <label>Transaction ID Mapping Field ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>