force-app/main/default/objects/VisualAntidote__Payment_Field__c/fields/VisualAntidote__Visa_Accepted__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Visa_Accepted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visa Accepted</label>
    <type>Checkbox</type>
</CustomField>